; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/book3s64/extr_radix_tlb.c_radix__flush_tlb_kernel_range.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/book3s64/extr_radix_tlb.c_radix__flush_tlb_kernel_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RIC_FLUSH_ALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radix__flush_tlb_kernel_range(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = call i64 (...) @cputlb_use_tlbie()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @RIC_FLUSH_ALL, align 4
  %9 = call i32 @_tlbie_pid(i32 0, i32 %8)
  br label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @_tlbiel_kernel_broadcast()
  br label %12

12:                                               ; preds = %10, %7
  ret void
}

declare dso_local i64 @cputlb_use_tlbie(...) #1

declare dso_local i32 @_tlbie_pid(i32, i32) #1

declare dso_local i32 @_tlbiel_kernel_broadcast(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
